# Yspeech

./: .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md  model
cmake/3rd/: glog.cmake  gtest.cmake  json.cmake  kaldi-native-fbank.cmake  onnxruntime.cmake  spdlog.cmake  taskflow.cmake
cmake/import/: SetupONNXRuntime.cmake
cmake/toolchain/: clang-toolchain.cmake
cmake/utils/: install_libs.cmake  set_folder.cmake
configs/: asr_pipeline.json  silero_vad_pipeline.json
doc/: architecture.md  components.md  configuration.md  contributing.md  design.md  developer-extension.md  performance.md  pipeline-refactor-plan.md  recommended-baseline.md  testing.md  third-party-libraries.md  troubleshooting.md  usage.md
example/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt  README.md  simple_transcribe.cpp  streaming_demo.cpp  transcribe_tool.cpp
examples/configs/: README.md  offline_paraformer_asr.json  offline_sensevoice_asr.json  simple_asr.json  streaming_asr.json  streaming_paraformer_asr.json  streaming_paraformer_asr_capabilities.json  streaming_paraformer_asr_dag.json  streaming_paraformer_asr_dag_timeout.json  streaming_paraformer_asr_incremental_decode.json  streaming_paraformer_asr_stream_source.json  streaming_sensevoice_asr.json  two_level_asr.json  vad_only.json
sample/: main.cpp
scripts/: install_kaldi_native_fbank.sh
src/: CMakeLists.txt  cicular_buffer.cppm  context.cppm  engine.cppm  pipeline.cppm  yspeech.cppm
src/audio/: audio.cppm  audio_file.cppm
src/common/: types.ixx
src/operator/: op_vad.cppm  operator.cppm
src/yspeech/: aspect.cppm  audio.cppm  capability.cppm  context.cppm  data_keys.cppm  engine.cppm  engine_runtime.cppm  error.cppm  frame_ring.cppm  frame_source.cppm  log.cppm  offline_asr.cppm  op.cppm  operators.cppm  performance_alert.cppm  performance_export.cppm  pipeline.cppm  pipeline_config.cppm  pipeline_manager.cppm  register.hpp  resource_monitor.cppm  ring_buffer.cppm  runtime_common.cppm  speech_processor.cppm  state.cppm  stream_controller.cppm  stream_process.cppm  stream_store.cppm  streaming_asr.cppm  types.cppm  yspeech.cppm
src/yspeech/aspects/: logger.cppm  timer.cppm
src/yspeech/audio/: audio_file.cppm
src/yspeech/capabilities/: alert.cppm  logger.cppm  status.cppm
src/yspeech/core/: context.cppm
src/yspeech/domain/asr/: base.cppm  paraformer.cppm  sensevoice.cppm  stage.cppm  whisper.cppm
src/yspeech/domain/feature/: base.cppm  kaldi_fbank.cppm  stage.cppm
src/yspeech/domain/source/: base.cppm  builtin.cppm  stage.cppm
src/yspeech/domain/vad/: base.cppm  silero.cppm  stage.cppm
src/yspeech/onnx/: ort_symbol_lookup.cppm
src/yspeech/op/: audio_input.cppm  ort_symbol_lookup.cppm
src/yspeech/op/asr/: asr_base.cppm  asr_paraformer.cppm  asr_sensevoice.cppm  asr_whisper.cppm  base.cppm  paraformer.cppm  sensevoice.cppm  whisper.cppm
src/yspeech/op/audio/: audio_input.cppm  converter.cppm
src/yspeech/op/feature/: feature_extract.cppm  kaldi_fbank.cppm
src/yspeech/op/vad/: silero.cppm  silero_vad.cppm  vad.cppm
src/yspeech/runtime/: common.cppm  event_record.cppm  event_stage.cppm  pipeline_builder.cppm  pipeline_executor.cppm  pipeline_recipe.cppm  runtime_context.cppm  runtime_dag.cppm  runtime_dag_executor.cppm  segment_registry.cppm  segment_state.cppm  stage_adapter.cppm  stage_path_executor.cppm  stage_support.cppm  token.cppm
test/: CMakeLists.txt  test.cpp  test_aspect.cpp  test_asr.cpp  test_asr_real_audio.cpp  test_audio.cpp  test_audio_buffer.cpp  test_capability.cpp  test_error.cpp  test_integration_vad_asr.cpp  test_kaldi_fbank_op.cpp  test_kaldi_fbank_op_extended.cpp  test_kaldi_fbank_performance.cpp  test_op.cpp  test_pipeline_runtime.cpp  test_real_audio.cpp  test_silero_vad.cpp  test_silero_vad_simple.cpp
test/test_pipeline/: test_aspect_config.json
